# consign

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml
contrib/: consign-cron.sh  consign-drain.service  consign-drain.timer  install-cron.sh
src/: drain.rs  lib.rs  main.rs  policy.rs  verify.rs
tests/: acceptance_ac1.rs  acceptance_ac2.rs  acceptance_ac3.rs  acceptance_ac4.rs  acceptance_ac5.rs  acceptance_ac6.rs  acceptance_ac7.rs  verify_tests.rs
